--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,25 @@
 spring.application.name=demo
+
+data.redis.host=localhost
+data.redis.port=6379
+data.redis.timeout=10000ms
+
+data.lettuce.pool.max-active=8
+data.lettuce.pool.max-wait=-1ms
+data.lettuce.pool.max-idle=8
+data.lettuce.pool.min-idle=8
+
+data.cache.type=redis
+data.cache.redis.time-to-live=30
+data.cache.redis.cache-null-values=false
+
+
+spring.datasource.url=jdbc:mysql://localhost:3307/db
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.username=user
+spring.datasource.password=password
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+
+server.port=8089
